<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="app_name">天沃天</string>
    <string name="action_settings">设置</string>
    <string name="action_mine">我的</string>
    <string name="home_page">首页</string>
    <string name="shopping_cart">购物车</string>
    <string name="cash_mall">现金商城</string>
    <string name="credit_mall">积分商城</string>
    <string name="service_center">服务中心</string>
    <string name="title_activity_login">天沃天账户登录</string>

    <!-- Strings 登录界面-->
    <string name="account">账户</string>
    <string name="password">登录密码</string>
    <string name="prompt_email">天沃天账号/手机账号/邮箱</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_at_once">立即注册</string>

    <!--注册界面Strings-->
    <string name="register_actionbar_titile">注册天沃天账号</string>
    <string name="get_vertification_code">获取验证码</string>
    <string name="input_phone_number_or_email">请输入手机号 / 邮箱号</string>
    <string name="input_vertification_code">请输入验证码</string>
    <string name="set_password">设置密码</string>
    <string name="password_hint">6-20位数字，非纯数字，不含空格，区分大小写</string>
    <string name="confirm_password_hint">确认密码</string>
    <string name="referer">推荐人</string>
    <string name="input_referer_name">输入推荐人姓名</string>
    <string name="show_agreement">注册即视为同意</string>
    <string name="agreement">《天沃天服务平台协议》</string>
    <string name="confirm_btn">确认</string>
</resources>