<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activity_bg"
    tools:context="com.yuanshuo.tianwotian.activity.RegisterActivity">



        <android.support.v7.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="?attr/colorPrimary"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:navigationIcon="@mipmap/activity_back"
             >

            <TextView
                android:layout_gravity="center"
                android:text="@string/register_actionbar_titile"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@mipmap/bg_input">

        <LinearLayout
            android:id="@+id/verification_code_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/tv_account"
                android:layout_gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/phone_icon" />

            <EditText
                android:id="@+id/edit_acount"
                android:background="@null"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:hint="@string/input_phone_number_or_email"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                 />
            <Button
                android:id="@+id/get_verification_code_btn"
                android:layout_width="117dp"
                android:layout_height="match_parent"
                android:background="@color/bg_btn_true"
                android:text="@string/get_vertification_code"
                android:textColor="@color/colorWhite"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:textStyle="normal"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/email_login_password"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:padding="10dp"
                android:src="@mipmap/input_verification_code"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/edit_verification_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_vertification_code"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp"
                android:imeActionId="@+id/login"
                android:background="@null"
                android:enabled="false"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/set_password"
           android:textSize="16sp"
           android:paddingLeft="14dp"
           android:paddingRight="12dp"
           android:textColor="@color/twentyBlack"
           android:layout_gravity="center"
           />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@mipmap/bg_input"
        android:orientation="vertical">

            <EditText
                android:id="@+id/first_input_passwd"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/password_hint"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:background="@null"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edit_confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/confirm_password_hint"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:paddingLeft="14dp"
                android:inputType="textPassword"
                android:background="@null"
                android:maxLines="1"
                android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/referer"
            android:textSize="16sp"
            android:textColor="@color/twentyBlack"
            android:paddingLeft="14dp"
            android:layout_gravity="center"
            android:gravity="center_vertical" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/divide_color"/>
        <EditText
            android:id="@+id/edit_referer"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/input_referer_name"
            android:textColorHint="@color/hint_color"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:paddingLeft="14dp"
            android:background="@color/colorWhite"
            android:maxLines="1"
            android:singleLine="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide_color"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="14dp"
            android:text="@string/show_agreement"
            android:textSize="16sp"
            android:textColor="@color/fortyBlack"/>

        <TextView
            android:id="@+id/tianwotian_store_agreement"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/agreement"
            android:textSize="16sp"
            android:textColor="@color/twentyBlack"/>

    </LinearLayout>

    <Button
        android:id="@+id/register_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@mipmap/button_bg_true"
        android:text="@string/confirm_btn"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="18sp"
        android:textColor="@color/colorWhite" />

</LinearLayout>
