<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.yuanshuo.tianwotian.MainActivity"
    tools:showIn="@layout/activity_main">

   <!--下方导航栏-->

    <RadioGroup
        android:id="@+id/rg_bottom_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/cash_mall"
            android:layout_width="0dp"
            android:button="@null"
            android:text="@string/cash_mall"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/credit_mall"
            android:text="@string/credit_mall"
            android:button="@null"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/service_center"
            android:text="@string/service_center"
            android:button="@null"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </RadioGroup>
</RelativeLayout>
